fix saturn and scrollbars

--- a/src/style.sass
+++ b/src/style.sass
@@ -74,3 +74,24 @@ p:first-child
   $thumb-shadow-size: 0
   $contrast: 5%
   @import 'input-range-scss'
+
+.scrollbars
+  overscroll-behavior-block: contain
+  &::-webkit-scrollbar
+    -webkit-appearance: none
+    width: 7px
+    height: 7px
+
+  &::-webkit-scrollbar-track
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3)
+    background: transparent
+
+  &::-webkit-scrollbar-thumb
+    border-radius: 4px
+    background-color: hsla(0, 0%, 50%, 0.4)
+
+  &:hover::-webkit-scrollbar-thumb
+    background-color: hsla(0, 0%, 100%, 0.8)
+
+  &::-webkit-scrollbar-thumb:hover
+    background-color: hsla(0, 0%, 100%, 0.8)
